--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "name": "fabler-presentation",
+  "description": "Fabler Presentation Site",
+  "version": "0.1.0",
+  "author": "James Lewandowski",
   "dependencies": {
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "react-helmet": "^5.2.0"
+    "babel-plugin-styled-components": "^1.10.6",
+    "gatsby": "^1.9.279",
+    "gatsby-link": "^1.6.46",
+    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-sass": "^2.1.24",
+    "gatsby-plugin-styled-components": "^3.1.14",
+    "react-helmet": "^5.2.1",
+    "scroll-to-element": "^2.0.3",
+    "styled-components": "^4.4.1"
   },
   "keywords": [
     "gatsby"
   ],
+  "main": "src/layouts/index.scss",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -20,7 +26,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.12.0"
+    "bulma": "^0.8.0",
+    "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
+    "resolve-url-loader": "^3.1.1"
   },
   "repository": {
     "type": "git",
