--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "bulma": "^0.8.0",
-    "gh-pages": "^2.1.1",
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
     "resolve-url-loader": "^3.1.1"
