Minor Updates to Footer

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,9 +2,17 @@
   "name": "fabler-presentation",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "src/layouts/index.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    }
+  ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "src",
+      "src/layouts"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -19,7 +27,7 @@
   },
   "imports": [
     {
-      "path": "src/pages/style.scss",
+      "path": "src/layouts/index.scss",
       "imports": [
         "node_modules/bulma/bulma.sass",
         "node_modules/bulma/sass/utilities/_all.sass",
