--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "James Lewandowski",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
+    "framer-motion": "^1.7.0",
     "gatsby": "^1.9.279",
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-react-helmet": "^2.0.11",
-    "gatsby-plugin-sass": "^2.1.24",
+    "gatsby-plugin-sass": "^2.1.27",
     "gatsby-plugin-styled-components": "^3.1.14",
     "react-helmet": "^5.2.1",
     "scroll-to-element": "^2.0.3",
